--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
   "name": "boir-api",
   "version": "1.0.0",
-  "description": "OpenAPI client for ",
-  "author": "OpenAPI-Generator Contributors",
+  "description": "OpenAPI client for BOIR API",
+  "author": "brrinta",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/brrinta/boir-api.git",
+  },
   "keywords": [
     "axios",
-    "typescript",
-    "openapi-client",
-    "openapi-generator",
-    ""
+    "boir-api"
   ],
   "license": "MIT",
   "main": "./dist/index.js",
