--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "author": "brrinta",
   "repository": {
     "type": "git",
-    "url": "https://github.com/brrinta/boir-api.git",
+    "url": "https://github.com/brrinta/boir-api.git"
   },
   "keywords": [
     "axios",
